# ePay

./: .gitignore  .gitmodules  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
icrc1_tokens/: download.sh  icrc1.did
scripts/: build.sh  info.sh  insert_supported_token_and_update_merchant.sh  install.sh  install_dev.sh  install_user_and_one_merchant.sh  upload_wasm.sh
src/: lib.rs  utils.rs
src/canisters/: manager.rs  merchant.did  merchant.rs  user.rs
src/ePay_backend/: Cargo.toml
src/ePay_backend/src/: config.rs  consts.rs  lib.rs  types.rs  utils.rs
src/ePay_backend/src/canisters/: manager.did  manager.rs  merchant.did  merchant.rs  user.rs
src/ePay_backend/src/data_structure/: mod.rs  paged_btree.rs
src/ePay_backend/src/interop/: merchant.rs  mod.rs
src/ePay_backend/src/management/: merchant.rs  mod.rs  report.rs  state.rs  wasm_store.rs
src/ePay_backend/src/merchant/: balance.rs  comment.rs  merchant.rs  mod.rs  order.rs  transaction.rs
src/ePay_frontend/src/: index.html  index.js
src/interop/: merchant.rs  user.rs
src/management/: mod.rs  state.rs  wasm_store.rs
src/merchant/: balance.rs  comment.rs  merchant.rs  mod.rs  notify.rs  order.rs  split.rs  tests.rs
src/tokens/: dip20.rs  icrc1.rs  mod.rs
src/user/: user.rs
tests/: canister_creation.sh  dip20.sh  info.sh  merchant.sh  merchant_manual.sh  payment.sh  prelude.sh  test.pem  token.sh
tests/notifer/: http_server.py  test.sh
token_deployment/dip20/: deploy.sh  token.wasm
token_deployment/icrc1/: test.sh
(+9 files in other folders)
