[package]
name = "ePay_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "user"
path = "src/canisters/user.rs"

[[bin]]
name = "merchant"
path = "src/canisters/merchant.rs"

[[bin]]
name = "manager"
path = "src/canisters/manager.rs"

[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-macros = "0.6"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
serde = "1.0.126"
serde_derive = "1.0.126"
ic-ledger-types = "0.5.0"
serde_json = "1.0.97"
